# mujoco_capability

./: .gitignore  CMakeLists.txt  MUJOCO_LOG.TXT  actuators.xml  asset_init.xml  camera.xml  data_handler.cpp  franka_panda_RH8D_R.xml  kinematic_chain_panda_rhand.xml  main_panda_RH8D.cpp  object.xml  readme.md  run_mujoco_sim  sensors.xml  table.xml  table_and_objects.xml
Data/: elliptic_0_0_02.csv  elliptic_0_0_05.csv  elliptic_0_0_1.csv  elliptic_30_0_02.csv  elliptic_30_0_05.csv  elliptic_30_0_1.csv  pyramidal_0_0_001.csv  pyramidal_0_0_01.csv  pyramidal_0_0_02.csv  pyramidal_0_0_05.csv  pyramidal_0_0_1.csv  pyramidal_30_0_001.csv  pyramidal_30_0_005.csv  pyramidal_30_0_01.csv  pyramidal_30_0_02.csv  pyramidal_30_0_05.csv  pyramidal_30_0_1.csv
apps/: main.cc  main_panda_RH8D.cpp
assets/RH8DR/: base.stl  forearm.stl  model.xml  palm assembly.stl  phalanx.stl  thumb_phalanx.stl
assets/RH8DR/XML/: model.xml
include/: ControlSystem.h  data_handler.h  franka_ik_He.hpp  tool_kits.cpp  tool_kits.h
models/: Cylinder.xml  Prism.xml  asset_init.xml  franka_panda_RH8D_R.xml  franka_panda_RH8D_R_Cylinder.xml  franka_panda_RH8D_R_Prism.xml  kinematic_chain_panda_rhand.xml  object.xml  table.xml  table_and_objects.xml
models/assets/Manipulation_scene/: Multi_shaped_object.stl  Table.stl
models/assets/RH8DR/: RH8DR.urdf  palm axis.stl  thumb base.stl  tip.stl
simulate/: CMakeLists.txt  Makefile  main.cc  simulate  simulate.cc  simulate.h  uitools.h
simulate/include/: tool_kits.h
src/: ControlSystem.cpp  controller.cpp  data_handler.cpp  lodepng.cpp  simple_plot.py
